--- a/index.html
+++ b/index.html
@@ -43,6 +43,55 @@
             </div>
             <div class="hero-overlay"></div>
         </section>
+        <section class="projects-gallery">
+            <div id="projects-gallery-container" class="container">
+                <div id="projects-gallery-image">
+                    <ul class="list-horizontal">
+                        <li class="list-item list-item_selected">
+                            <h3 class="title title_extra_small">Rostov-on-Don, Admiral</h3>
+                        </li>
+                        <li class="list-item">
+                            <h3 class="title title_extra_small">Sochi Thieves</h3>
+                        </li>
+                        <li class="list-item">
+                            <h3 class="title title_extra_small">Rostov-on-Don Patriotic</h3>
+                        </li>
+                    </ul>
+                    <img src="images/rostov-on-don_project.png" alt="">    
+                </div>
+                <div id="projects-gallery-description">
+                    <h2 class="title title_medium">COMPLETED PROJECTS</h2>
+                    <p class="text text_small">Only a small part of the work performed by our company is presented on the site. 
+                        For 14 years on in the construction market we have made happy more than 1000 families
+                    </p>
+                    <ul class="list-vertical list-vertical_columns_2">
+                        <li class="list-item">
+                            <h3 class="title title_small">CITY:</h3>
+                            <p class="text text_extra_small">Rostov-on-Don LCD admiral</p>
+                        </li>
+                        <li class="list-item">
+                            <h3 class="title title_small">REPAIR TIME:</h3>
+                            <p class="text text_extra_small">3.5 months</p>
+                        </li>
+                        <li class="list-item">
+                            <h3 class="title title_small">APARTMENT AREA:</h3>
+                            <p class="text text_extra_small">81 m2</p>
+                        </li>
+                        <li class="list-item">
+                            <h3 class="title title_small">REPAIR COST:</h3>
+                            <p class="text text_extra_small">Upon request</p>
+                        </li>
+                    </ul>
+                </div>
+                <div id="projects-gallery-pager" class="pager">
+                    <button class="pager-button pager-button_backward"><img src="./images/arrow_to_left.svg" alt="Влево"></button>
+                    <button class="pager-button"><img src="./images/dot.svg" alt="Rostov-on-Don, Admiral"></button>
+                    <button class="pager-button"><img src="./images/dot.svg" alt="Sochi Thieves"></button>
+                    <button class="pager-button"><img src="./images/dot.svg" alt="Rostov-on-Don Patriotic"></button>
+                    <button class="pager-button pager-button_forward"><img src="./images/arrow_to_right.svg" alt="Вправо"></button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
