--- a/index.html
+++ b/index.html
@@ -92,6 +92,46 @@
                 </div>
             </div>
         </section>
+        <section id="online-control">
+            <div>
+                <h2 class="title title_small">ONLINE CONTROL</h2>
+            </div>
+            <div class="title-separator-image">
+                <img src="images/title-separators/horizontal_line.svg" alt="">
+                <img src="images/title-separators/camera.svg" alt="">
+                <img src="images/title-separators/horizontal_line.svg" alt="">
+            </div>
+            <div id="online-control-demo">
+                <img src="images/online_control_demo_preview.jpg" alt="">
+                <img src="images/playback.svg" alt="">
+            </div>
+            <div>
+                <img src="images/title-separators/long_horizontal_line.svg" alt="">
+            </div>
+            <div id="online-control-text" >
+                <p class="text text_medium text_black">
+                    At each facility, a camera is installed that broadcasts the progress of work on the clock. 
+                    At any time, you can go to our website and monitor the progress of work in your apartment. 
+                    You can watch the live broadcast from one of our facilities!
+                    Leave a request below and you will receive a link to the broadcast.
+                </p>    
+            </div>
+            <form id="online-control-form" action="">
+                <div class="online-control-form-input-container">
+                    <label for="" class="input-text-label">Name:</label>
+                    <input type="text" class="input-text" placeholder="What is your name:">    
+                </div>
+                <div class="online-control-form-input-container">
+                    <label for="" class="input-text-label">Phone:</label>
+                    <input type="text" class="input-text" placeholder="Your phone number:">    
+                </div>
+                <button id="online-control-form-submit" class="button">SUBMIT</button>
+                <div id="online-control-form-agreement">
+                    <input type="checkbox" class="input-checkbox" name="sdfsdfsdf" >
+                    <label for="" class="input-checkbox-label">I agree to the processing of personal data</label>
+                </div>
+            </form>
+        </section>
     </main>
 </body>
 </html>
