add types of repair

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </section>
         <section id="online-control">
             <div>
-                <h2 class="title title_small">ONLINE CONTROL</h2>
+                <h2 class="title title_small title_align_center">ONLINE CONTROL</h2>
             </div>
             <div class="title-separator-image">
                 <img src="images/title-separators/horizontal_line.svg" alt="">
@@ -131,6 +131,64 @@
                     <label for="" class="input-checkbox-label">I agree to the processing of personal data</label>
                 </div>
             </form>
+        </section>
+        <section id="types-of-repair">
+            <h2 class="title title_small title_align_center">TYPES OF REPAIR</h2>
+            <div class="title-separator-image">
+                <img src="images/title-separators/horizontal_line.svg" alt="">
+                <img src="images/title-separators/repair.svg" alt="">
+                <img src="images/title-separators/horizontal_line.svg" alt="">
+            </div>
+            <div id="types-of-repair-list">
+                <div class="types-of-repair-item">
+                    <img src="images/project-types/type1.png" alt="">
+                    <div class="repair-description">
+                        <h4 class="title title_extra_small title_grey">Redecorating</h4>
+                        <ul class="repair-description-list">
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering</li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                    </div>
+                    <button class="button repair-item-button">from 900 rub / m2</button>
+                </div>
+                <div class="types-of-repair-item">
+                    <img src="images/project-types/type2.png" alt="">
+                    <div class="repair-description">
+                        <h4 class="title title_extra_small title_grey">Overhaul</h4>
+                        <ul class="repair-description-list">
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering</li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                    </div>
+                    <button class="button repair-item-button">from 1800 rub / m2</button>
+                </div>
+                <div class="types-of-repair-item">
+                    <img src="images/project-types/type3.png" alt="">
+                    <div class="repair-description">
+                        <h4 class="title title_extra_small title_grey">Designer Repair</h4>
+                        <ul class="repair-description-list">
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering</li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                    </div>
+                    <button class="button repair-item-button">from 4000 rub / m2</button>
+                </div>
+            </div>
         </section>
     </main>
 </body>
