--- a/index.html
+++ b/index.html
@@ -43,6 +43,153 @@
             </div>
             <div class="hero-overlay"></div>
         </section>
+        <section class="projects-gallery">
+            <div id="projects-gallery-container" class="container">
+                <div id="projects-gallery-image">
+                    <ul class="list-horizontal">
+                        <li class="list-item list-item_selected">
+                            <h3 class="title title_extra_small">Rostov-on-Don, Admiral</h3>
+                        </li>
+                        <li class="list-item">
+                            <h3 class="title title_extra_small">Sochi Thieves</h3>
+                        </li>
+                        <li class="list-item">
+                            <h3 class="title title_extra_small">Rostov-on-Don Patriotic</h3>
+                        </li>
+                    </ul>
+                    <img src="images/rostov-on-don_project.png" alt="">    
+                </div>
+                <div id="projects-gallery-description">
+                    <h2 class="title title_medium">COMPLETED PROJECTS</h2>
+                    <p class="text text_small">Only a small part of the work performed by our company is presented on the site. 
+                        For 14 years on in the construction market we have made happy more than 1000 families
+                    </p>
+                    <ul class="list-vertical list-vertical_columns_2">
+                        <li class="list-item">
+                            <h3 class="title title_small">CITY:</h3>
+                            <p class="text text_extra_small">Rostov-on-Don LCD admiral</p>
+                        </li>
+                        <li class="list-item">
+                            <h3 class="title title_small">REPAIR TIME:</h3>
+                            <p class="text text_extra_small">3.5 months</p>
+                        </li>
+                        <li class="list-item">
+                            <h3 class="title title_small">APARTMENT AREA:</h3>
+                            <p class="text text_extra_small">81 m2</p>
+                        </li>
+                        <li class="list-item">
+                            <h3 class="title title_small">REPAIR COST:</h3>
+                            <p class="text text_extra_small">Upon request</p>
+                        </li>
+                    </ul>
+                </div>
+                <div id="projects-gallery-pager" class="pager">
+                    <button class="pager-button pager-button_backward"><img src="./images/arrow_to_left.svg" alt="Влево"></button>
+                    <button class="pager-button"><img src="./images/dot.svg" alt="Rostov-on-Don, Admiral"></button>
+                    <button class="pager-button"><img src="./images/dot.svg" alt="Sochi Thieves"></button>
+                    <button class="pager-button"><img src="./images/dot.svg" alt="Rostov-on-Don Patriotic"></button>
+                    <button class="pager-button pager-button_forward"><img src="./images/arrow_to_right.svg" alt="Вправо"></button>
+                </div>
+            </div>
+        </section>
+        <section id="online-control">
+            <div>
+                <h2 class="title title_small title_align_center">ONLINE CONTROL</h2>
+            </div>
+            <div class="title-separator-image">
+                <img src="images/title-separators/horizontal_line.svg" alt="">
+                <img src="images/title-separators/camera.svg" alt="">
+                <img src="images/title-separators/horizontal_line.svg" alt="">
+            </div>
+            <div id="online-control-demo">
+                <img src="images/online_control_demo_preview.jpg" alt="">
+                <img src="images/playback.svg" alt="">
+            </div>
+            <div>
+                <img src="images/title-separators/long_horizontal_line.svg" alt="">
+            </div>
+            <div id="online-control-text" >
+                <p class="text text_medium text_black">
+                    At each facility, a camera is installed that broadcasts the progress of work on the clock. 
+                    At any time, you can go to our website and monitor the progress of work in your apartment. 
+                    You can watch the live broadcast from one of our facilities!
+                    Leave a request below and you will receive a link to the broadcast.
+                </p>    
+            </div>
+            <form id="online-control-form" action="">
+                <div class="online-control-form-input-container">
+                    <label for="" class="input-text-label">Name:</label>
+                    <input type="text" class="input-text" placeholder="What is your name:">    
+                </div>
+                <div class="online-control-form-input-container">
+                    <label for="" class="input-text-label">Phone:</label>
+                    <input type="text" class="input-text" placeholder="Your phone number:">    
+                </div>
+                <button id="online-control-form-submit" class="button">SUBMIT</button>
+                <div id="online-control-form-agreement">
+                    <input type="checkbox" class="input-checkbox" name="sdfsdfsdf" >
+                    <label for="" class="input-checkbox-label">I agree to the processing of personal data</label>
+                </div>
+            </form>
+        </section>
+        <section id="types-of-repair">
+            <h2 class="title title_small title_align_center">TYPES OF REPAIR</h2>
+            <div class="title-separator-image">
+                <img src="images/title-separators/horizontal_line.svg" alt="">
+                <img src="images/title-separators/repair.svg" alt="">
+                <img src="images/title-separators/horizontal_line.svg" alt="">
+            </div>
+            <div id="types-of-repair-list">
+                <div class="types-of-repair-item">
+                    <img src="images/project-types/type1.png" alt="">
+                    <div class="repair-description">
+                        <h4 class="title title_extra_small title_grey">Redecorating</h4>
+                        <ul class="repair-description-list">
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering</li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                    </div>
+                    <button class="button repair-item-button">from 900 rub / m2</button>
+                </div>
+                <div class="types-of-repair-item">
+                    <img src="images/project-types/type2.png" alt="">
+                    <div class="repair-description">
+                        <h4 class="title title_extra_small title_grey">Overhaul</h4>
+                        <ul class="repair-description-list">
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering</li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                    </div>
+                    <button class="button repair-item-button">from 1800 rub / m2</button>
+                </div>
+                <div class="types-of-repair-item">
+                    <img src="images/project-types/type3.png" alt="">
+                    <div class="repair-description">
+                        <h4 class="title title_extra_small title_grey">Designer Repair</h4>
+                        <ul class="repair-description-list">
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering</li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                    </div>
+                    <button class="button repair-item-button">from 4000 rub / m2</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
