--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section class="hero">
             <div class="container hero-container">
-                <h1 class="title title_large">
+                <h1 class="title title_large title_uppercase">
                     <span class="title_white">Turnkey Repair in the city of</span> Rostov-on-Don
                 </h1>
                 <p class="text text_large">Get ready-made turnkey repairs on time
@@ -48,13 +48,13 @@
                 <div id="projects-gallery-image">
                     <ul class="list-horizontal">
                         <li class="list-item list-item_selected">
-                            <h3 class="title title_extra_small">Rostov-on-Don, Admiral</h3>
+                            <h3 class="title title_extra_small title_uppercase">Rostov-on-Don, Admiral</h3>
                         </li>
                         <li class="list-item">
-                            <h3 class="title title_extra_small">Sochi Thieves</h3>
+                            <h3 class="title title_extra_small title_uppercase">Sochi Thieves</h3>
                         </li>
                         <li class="list-item">
-                            <h3 class="title title_extra_small">Rostov-on-Don Patriotic</h3>
+                            <h3 class="title title_extra_small title_uppercase">Rostov-on-Don Patriotic</h3>
                         </li>
                     </ul>
                     <img src="images/rostov-on-don_project.png" alt="">    
@@ -194,11 +194,11 @@
             <div id="request-measurer-container">
                 <div id="request-measurer-service-container">
                     <ol>
-                        <li><div>&nbsp</div>Our specialist will arrive for measurements per day
+                        <li>Our specialist will arrive for measurements per day
                             contact, or appoint a date convenient for you</li>
-                        <li><div>&nbsp</div><span>Free metering</span></li>
-                        <li><div>&nbsp</div><span>Free consultation</span></li>
-                        <li><div>&nbsp</div><span>Get a cost estimate and
+                        <li><span>Free metering</span></li>
+                        <li><span>Free consultation</span></li>
+                        <li><span>Get a cost estimate and
                             the timing of your future repairs</span></li>
                     </ol>
                 </div>
