--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                 IC "Repair Design Project"
             </div>
             <nav>
-                <ul class="header-navigation">
-                    <li class="header-navigation__item"><a href="#">HOME</a></li>
-                    <li class="header-navigation__item"><a href="#">PROJECTS</a></li>
-                    <li class="header-navigation__item"><a href="#">MEASUREMENT</a></li>
-                    <li class="header-navigation__item"><a href="#">TEAM</a></li>
-                    <li class="header-navigation__item"><a href="#">REVIEWS</a></li>
-                    <li class="header-navigation__item"><a href="#">CONTACTS</a></li>
+                <ul class="navigation">
+                    <li class="navigation__item"><a href="#">HOME</a></li>
+                    <li class="navigation__item"><a href="#">PROJECTS</a></li>
+                    <li class="navigation__item"><a href="#">MEASUREMENT</a></li>
+                    <li class="navigation__item"><a href="#">TEAM</a></li>
+                    <li class="navigation__item"><a href="#">REVIEWS</a></li>
+                    <li class="navigation__item"><a href="#">CONTACTS</a></li>
                 </ul>
             </nav>
             <a href="tel:+79287683239">+7 (928) 768-32-39</a>
@@ -29,7 +29,7 @@
     <main>
         <section class="hero">
             <div class="container hero-container">
-                <h1 class="title title_large">
+                <h1 class="title title_large title_uppercase">
                     <span class="title_white">Turnkey Repair in the city of</span> Rostov-on-Don
                 </h1>
                 <p class="text text_large">Get ready-made turnkey repairs on time
@@ -48,13 +48,13 @@
                 <div id="projects-gallery-image">
                     <ul class="list-horizontal">
                         <li class="list-item list-item_selected">
-                            <h3 class="title title_extra_small">Rostov-on-Don, Admiral</h3>
+                            <h3 class="title title_extra_small title_uppercase">Rostov-on-Don, Admiral</h3>
                         </li>
                         <li class="list-item">
-                            <h3 class="title title_extra_small">Sochi Thieves</h3>
+                            <h3 class="title title_extra_small title_uppercase">Sochi Thieves</h3>
                         </li>
                         <li class="list-item">
-                            <h3 class="title title_extra_small">Rostov-on-Don Patriotic</h3>
+                            <h3 class="title title_extra_small title_uppercase">Rostov-on-Don Patriotic</h3>
                         </li>
                     </ul>
                     <img src="images/rostov-on-don_project.png" alt="">    
@@ -190,6 +190,209 @@
                 </div>
             </div>
         </section>
+        <section id="request-measurer">
+            <div id="request-measurer-container">
+                <div id="request-measurer-service-container">
+                    <ol>
+                        <li>Our specialist will arrive for measurements per day
+                            contact, or appoint a date convenient for you</li>
+                        <li><span>Free metering</span></li>
+                        <li><span>Free consultation</span></li>
+                        <li><span>Get a cost estimate and
+                            the timing of your future repairs</span></li>
+                    </ol>
+                </div>
+                <div id="request-measurer-request-container">
+                    <h4>Leave a request for free
+                        departure of the measurer
+                    </h4>
+                    <form id="request-measurer-form" action="">
+                        <div id="request-measurer-form-text-inputs">
+                            <div class="request-measurer-form-input-container">
+                                <label for="" class="input-text-label input_light">Name:</label>
+                                <input type="text" class="input-text input_light" placeholder="What is your name:">    
+                            </div>
+                            <div class="request-measurer-form-input-container">
+                                <label for="" class="input-text-label input_light">Phone:</label>
+                                <input type="text" class="input-text input_light" placeholder="Your phone number:">    
+                            </div>
+                            <div class="request-measurer-form-input-container">
+                                <label for="" class="input-text-label input_light">Email:</label>
+                                <input type="text" class="input-text input_light" placeholder="Your email">    
+                            </div>    
+                        </div>
+                        <div>
+                            <input type="checkbox" class="input-checkbox" name="" >
+                            <label for="" class="input-checkbox-label input_light">I agree to the processing of personal data</label>
+                        </div>
+                        <button id="request-measurer-form-submit" class="button">Call the measurer</button>
+                    </form>
+                </div>
+                <div id="discount-offer">
+                    <img src="images/request-measurer/piggy-bank.svg" alt="">
+                    <p>Help save 10 - 20% of the cost of materials</p>
+                </div>     
+            </div>
+        </section>
+        <section id="examples">
+            <div class="container examples-container">
+                <div id="examples-gallery">
+                    <img src="images/examples/gallery_pic1.png" alt="">
+                    <img src="images/examples/gallery_pic2.png" alt="">
+                    <img src="images/examples/gallery_pic3.png" alt="">
+                    <img src="images/examples/gallery_pic4.png" alt="">
+                </div>
+                <div id="examples-names">
+                    <h2 class="title title_medium title_uppercase">We realize your wildest fantasies</h2>
+                    <ul id="examples-names-list" class="list-vertical">
+                        <li>American classic</li>
+                        <li>Empire</li>
+                        <li>Classical</li>
+                        <li>Loft</li>
+                        <li>Minimalism</li>
+                        <li>Provence</li>
+                        <li>Romanticism</li>
+                        <li>Scandinavian style</li>
+                        <li>Mediterranean style</li>
+                        <li>High tech</li>
+                        <li>Eclecticism</li>
+                    </ul>    
+                </div>
+            </div>
+        </section>
+        <section id="our-clients">
+            <div class="container our-clients-content">
+                <h2 class="title title_medium title_uppercase title_align_center text_black">our clients</h2>
+                <div class="title-separator-image">
+                    <img src="images/title-separators/horizontal_line.svg" alt="">
+                    <img src="images/title-separators/handshake.svg" alt="">
+                    <img src="images/title-separators/horizontal_line.svg" alt="">
+                </div>
+                <p class="text text_black text_medium">80% of our customers recommend us to their friends and family.</p>
+                <div id="feedback-list">
+                    <div class="client-feedback">
+                        <div class="client-feedback-title">
+                            <img src="images/clients/mfedosova.png" alt="">
+                            <p class="text text_medium text_black">Fedosova Maria Konstantinovna</p>
+                        </div>
+                        <p class="text text_extra_small text_black">
+                            I want to thank the guys for their work. We put your shower part in repair. 
+                            I am very grateful that I referred to the repair as to my own. 
+                            Great thanks I express the project to Georgia for its professionalism and approach.
+                            The repair process was turned out in terms, faster than anticipated. 
+                            Team mobile and professional. Works performed qualitatively without comments. 
+                            Quality satisfied. Prices democratic. I recommend these masters.
+                        </p>
+                        <div class="client-feedback-results">
+                            <div class="client-feedback-result"><img src="images/examples/area.svg" alt=""><p>40 M2</p></div>
+                            <div class="client-feedback-result"><img src="images/examples/calendar.svg" alt=""><p>48 DAYS</p></div>
+                        </div>
+                    </div>
+                    <div class="client-feedback">
+                        <div class="client-feedback-title">
+                            <img src="images/clients/safanasyev.png" alt="">
+                            <p class="text text_medium text_black">Afanasyev Sergey Alexandrovich</p>
+                        </div>
+                        <p class="text text_extra_small text_black">
+                            I want to thank the guys for their work. We put your shower part in repair. 
+                            I am very grateful that I referred to the repair as to my own. 
+                            Great thanks I express the project to Georgia for its professionalism and approach.
+                            The repair process was turned out in terms, faster than anticipated. 
+                            Team mobile and professional. Works performed qualitatively without comments. 
+                            Quality satisfied. Prices democratic. I recommend these masters.
+                        </p>
+                        <div class="client-feedback-results">
+                            <div class="client-feedback-result"><img src="images/examples/area.svg" alt=""><p>90 M2</p></div>
+                            <div class="client-feedback-result"><img src="images/examples/calendar.svg" alt=""><p>128 DAYS</p></div>
+                        </div>
+                    </div>
+                    <div class="client-feedback">
+                        <div class="client-feedback-title">
+                            <img src="images/clients/ekiriev.png" alt="">
+                            <p class="text text_medium text_black">Kiriev Egor Leonidovich</p>
+                        </div>
+                        <p class="text text_extra_small text_black">
+                            I want to thank the guys for their work. We put your shower part in repair. 
+                            I am very grateful that I referred to the repair as to my own. 
+                            Great thanks I express the project to Georgia for its professionalism and approach.
+                            The repair process was turned out in terms, faster than anticipated. 
+                            Team mobile and professional. Works performed qualitatively without comments. 
+                            Quality satisfied. Prices democratic. I recommend these masters.
+                        </p>
+                        <div class="client-feedback-results">
+                            <div class="client-feedback-result"><img src="images/examples/area.svg" alt=""><p>56 M2</p></div>
+                            <div class="client-feedback-result"><img src="images/examples/calendar.svg" alt=""><p>86 DAYS</p></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="ask-question">
+            <div class="container ask-question-content">
+                <h2 class="title title_small title_uppercase title_white">have any questions?</h2>
+                <form id="ask-question-form" action="">
+                    <div id="ask-question-form-first-line">
+                        <div>
+                            <label for="" class="input-text-label input_light">Name</label>
+                            <input type="text" class="input-text input_light" placeholder="What is your name:">    
+                        </div>
+                        <div>
+                            <label for="" class="input-text-label input_light">Phone</label>
+                            <input type="text" class="input-text input_light" placeholder="What is your name:">    
+                        </div>
+                    </div>
+                    <div>
+                        <label for="" class="input-text-label input_light">Question</label>
+                        <input type="text" class="input-text input_light" placeholder="I want to know:">    
+                    </div>
+                    <div id="ask-question-form-agreement">
+                        <input type="checkbox" class="input-checkbox" name="sdfsdfsdf" >
+                        <label for="" class="input-checkbox-label input_light">I agree to the processing of personal data</label>
+                    </div>
+                    <button id="ask-question-form-submit" class="button">SUBMIT</button>
+                </form>
+            </div>
+        </section>
+        <section id="contacts">
+            <div class="container contacts-content">
+                <div class="contacts-decoration">
+                    <img src="images/contacts/skyline-left.svg" alt="">
+                    <img src="images/contacts/skyline-right.svg" alt="">    
+                </div>
+                <div class="contacts-information">
+                    <h2 class="title title_uppercase">
+                        Rostov-on-Don, Nansen St., 239 Shopping Center
+                        Decorum Tel +7 (928) 768 32 29
+                    </h2>
+                    <div id="contacts-logos">
+                        <img src="images/contacts/mail.svg" alt="">
+                        <img src="images/contacts/instagram.svg" alt="">
+                    </div>
+                </div>
+                <div class="contacts-map">
+                    <img src="images/contacts/map.png" alt="">
+                </div>    
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="container header-content">
+            <div class="logo">
+                IC "Repair Design Project"
+            </div>
+            <nav>
+                <ul class="navigation">
+                    <li class="navigation__item"><a href="#">HOME</a></li>
+                    <li class="navigation__item"><a href="#">PROJECTS</a></li>
+                    <li class="navigation__item"><a href="#">MEASUREMENT</a></li>
+                    <li class="navigation__item"><a href="#">TEAM</a></li>
+                    <li class="navigation__item"><a href="#">REVIEWS</a></li>
+                    <li class="navigation__item"><a href="#">CONTACTS</a></li>
+                </ul>
+            </nav>
+            <a href="tel:+79287683239">+7 (928) 768-32-39</a>
+            <button class="button">Request a call</button>
+        </div>
+    </footer>
 </body>
 </html>
